@@ -1,3 +1,11 @@
+2010-12-13  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* unix/tcl.m4:    Cross-compile support for Win and UNIX (backported)
+	* unix/configure: (autoconf-2.59)
+	* win/tcl.m4:
+	* win/configure.in:
+	* win/configure: (autoconf-2.59)
+
 2010-12-12  Stuart Cassoff  <stwo@users.sourceforge.net>
 
 	* unix/tcl.m4: Better building on OpenBSD.
